// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ColorSetting should match snapshot, all 1`] = `
<div>
  <div
    class="form-group"
    data-testid="id"
  >
    <label
      class="control-label col-sm-4"
      for="id"
    >
      label
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="color-input input-group"
      >
        <input
          class="form-control"
          data-testid="color-inputColorValue"
          id="id-inputColorValue"
          maxlength="7"
          type="text"
          value="#fff"
        />
        <span
          class="input-group-addon color-pad"
          id="id-squareColorIcon"
        >
          <i
            class="color-icon"
            id="id-squareColorIconValue"
            style="background-color: rgb(255, 255, 255);"
          />
        </span>
      </div>
      <div
        class="help-text"
        data-testid="idhelp-text"
      >
        helptext
      </div>
    </div>
  </div>
</div>
`;

exports[`components/ColorSetting should match snapshot, clicked on color setting 1`] = `
<div>
  <div
    class="form-group"
    data-testid="id"
  >
    <label
      class="control-label col-sm-4"
      for="id"
    >
      label
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="color-input input-group"
      >
        <input
          class="form-control"
          data-testid="color-inputColorValue"
          id="id-inputColorValue"
          maxlength="7"
          type="text"
          value="#fff"
        />
        <span
          class="input-group-addon color-pad"
          id="id-squareColorIcon"
        >
          <i
            class="color-icon"
            id="id-squareColorIconValue"
            style="background-color: rgb(255, 255, 255);"
          />
        </span>
      </div>
      <div
        class="help-text"
        data-testid="idhelp-text"
      >
        helptext
      </div>
    </div>
  </div>
</div>
`;

exports[`components/ColorSetting should match snapshot, disabled 1`] = `
<div>
  <div
    class="form-group"
    data-testid="id"
  >
    <label
      class="control-label col-sm-4"
      for="id"
    >
      label
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="color-input input-group"
      >
        <input
          class="form-control"
          data-testid="color-inputColorValue"
          disabled=""
          id="id-inputColorValue"
          maxlength="7"
          type="text"
          value="#fff"
        />
      </div>
      <div
        class="help-text"
        data-testid="idhelp-text"
      />
    </div>
  </div>
</div>
`;

exports[`components/ColorSetting should match snapshot, no help text 1`] = `
<div>
  <div
    class="form-group"
    data-testid="id"
  >
    <label
      class="control-label col-sm-4"
      for="id"
    >
      label
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="color-input input-group"
      >
        <input
          class="form-control"
          data-testid="color-inputColorValue"
          id="id-inputColorValue"
          maxlength="7"
          type="text"
          value="#fff"
        />
        <span
          class="input-group-addon color-pad"
          id="id-squareColorIcon"
        >
          <i
            class="color-icon"
            id="id-squareColorIconValue"
            style="background-color: rgb(255, 255, 255);"
          />
        </span>
      </div>
      <div
        class="help-text"
        data-testid="idhelp-text"
      />
    </div>
  </div>
</div>
`;
